# UnrealLibretro

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  README.md  UnrealLibretro.uplugin  UnrealLibretro.uplugin.UE5.2  UnrealLibretro.uplugin.UE5.3  fec.cpp  netarch.cpp  package.py  push.sh  rs.cpp  sam2.c  sam2.h  sdlarch.cpp  setup.cmd  setup.sh  test.sh  ulnet.h
.github/workflows/: UnrealLibretro.yml  ci-build.yml  main.yml  netarch.yml  release.yml
Config/: DefaultUnrealLibretro.ini  FilterPlugin.ini  Input.ini
Content/: LibretroCharacter.uasset  LibretroGamemode.uasset  LibretroHUD.uasset  LibretroMap.umap  LibretroWorld.umap  OpenSans-Bold.uasset  OpenSans-Bold_Font.uasset
Content/ArcadeMachine/: dogecoin1.uasset
Content/Audio/: Woof.uasset
Content/Blueprints/: LibretroActorBase.uasset  LibretroArcadeGunActor.uasset  LibretroArcadeMachineActor.uasset  LibretroCharacter.uasset  LibretroCoreMenuWidget.uasset  LibretroDogeCoinActor.uasset  LibretroFocusViewPawn.uasset  LibretroHUD.uasset  LibretroNetplaySetting.uasset  LibretroTVPawn.uasset  LibretroVRGameMode.uasset  LibretroVRPawnBlueprint.uasset  LibretroVRTeleportVisualizer.uasset
Content/Certificates/: cacert.pem
Content/FirstPerson/Meshes/: BaseMaterial.uasset
Content/Geometry/Meshes/: 1M_Cube.uasset  CubeMaterial.uasset
Content/Haptics/: GrabHapticEffect.uasset  PistolFireHapticEffect.uasset
Content/Materials/: M_ArcadeCabinet.uasset  M_ArcadeCabinetMaterial.uasset  M_BaseMaterial.uasset  M_Cube.uasset  M_CubeMaterialOverride.uasset  M_Dogecoin.uasset  M_GlowingScreen.uasset  M_SplineArcMat.uasset  M_TeleportCylinder.uasset  M_TeleportTraceMaterial.uasset  TV_90s.uasset
Content/Materials/Functions/: MF_LightmassReplace.uasset  MF_OccludedPixels.uasset
Content/Mesh/: 1MeterCube.uasset  ArcadeCabinet.uasset  ArcadeGun.uasset  ArcadeScreen.uasset  BeamMesh.uasset  TV_90s_Bezel.uasset  TV_90s_TV_90s.uasset  TV_90s_screen_mesh.uasset  Triplane.uasset  dogecoin.uasset
Content/TVBlueprint/: GlowingScreen.uasset  LibretroTVActor.uasset  missing.uasset
Content/TVBlueprint/tv/: Cable.uasset  Cable_Normal.uasset  Default-Material.uasset  Plugs.uasset  Plugs_Albedo.uasset  Plugs_Normal.uasset  Screen.uasset  Screen_Inside.uasset  TV_90s.uasset  TV_90s_Albedo.uasset  TV_90s_Bezel.uasset  TV_90s_Cables.uasset  TV_90s_Helper.uasset  TV_90s_Inside.uasset  TV_90s_RCA_Red.uasset  TV_90s_RCA_White.uasset  TV_90s_RCA_Yellow.uasset  TV_90s_TV_90s.uasset  TV_90s_button_power.uasset  TV_90s_screen_mesh.uasset  trans1.uasset
Content/Textures/: 300coin.uasset  DefaultMaterial_baseColor.uasset  DefaultMaterial_emissive.uasset  DogeCoin_baseColor.uasset  TV_90s_Normal.uasset
Source/UnrealLibretro/: UnrealLibretro.Build.cs
Source/UnrealLibretro/Private/: LambdaRunnable.cpp  LambdaRunnable.h  LibretroBlueprintFunctionLibrary.cpp  LibretroContext.cpp  LibretroContext.h  LibretroCoreInstance.cpp  LibretroInputComponent.cpp  LibretroInputComponent.h  LibretroJoypadInputComponent.cpp  LibretroKeyboardInputComponent.cpp  LibretroLibjuiceConnMux.c  LibretroLibjuiceConnPoll.c  LibretroLibjuiceConnThread.c  LibretroLibjuiceConnUser.c  LibretroSettings.h  LibretroThirdPartyImplementation.c  LibretroThirdPartyImplementation.cpp  NetImguiImplementation.cpp  RawAudioSoundWave.cpp  RawAudioSoundWave.h  UnrealLibretro.cpp  fec.h  sam2.h  sdlarch.cpp  sdlarch.h  ulnet.h
Source/UnrealLibretro/Private/GL/: extension_definitions.h
Source/UnrealLibretro/Private/Mac/SDL2/: SDL_config.h
Source/UnrealLibretro/Public/: LambdaRunnable.h  LibretroBlueprintFunctionLibrary.h  LibretroCoreInstance.h  LibretroGameMode.h  LibretroGrabComponent.h  LibretroInputComponent.h  LibretroInputDefinitions.h  LibretroJoypadInputComponent.h  LibretroKeyboardInputComponent.h  LibretroSettings.h  LibretroVRInteractionInterface.h  LibretroVRPawn.h  UnrealLibretro.h  sm64_helper.h
Source/UnrealLibretro/Public/glad/: gl.cpp  gl.h  wgl.cpp  wgl.h
Source/UnrealLibretro/Public/libretro/gfx/scaler/: pixconv.c
Source/UnrealLibretro/Public/libretro/include/gfx/scaler/: pixconv.h
Source/UnrealLibretroEditor/: UnrealLibretroEditor.Build.cs
Source/UnrealLibretroEditor/Private/: LibretroCoreInstanceDetails.cpp  LibretroCoreInstanceDetails.h  UnrealLibretroEditor.cpp
Source/UnrealLibretroEditor/Private/lzma/: 7zAlloc.c  7zFile.h  7zTypes.h  Alloc.c  CpuArch.c  DllSecur.c  LICENSE  Threads.h
Source/UnrealLibretroEditor/Public/: UnrealLibretroEditor.h
